2010-09-10  Tobias Burnus  <burnus@net-b.de>

	PR fortran/45186
	* trans.h (build1_stat_loc, build2_stat_loc, build3_stat_loc,
	build4_stat_loc): New inline functions.
	(build1_loc, build2_loc, build3_loc, build4_loc): New macros.
	(build1_v, build2_v, build3_v, build4_v): Use input_location
	as locus.
	* trans-array.c (gfc_trans_scalarized_loop_end,
	gfc_conv_array_parameter): Replace build[1-4] by build[1-4]_loc.
	* trans.c (gfc_build_addr_expr, gfc_build_array_ref,
	gfc_finish_wrapped_block): Ditto.
	* trans-decl.c (gfc_init_default_dt, init_intent_out_dt): Ditto.
	* trans-expr.c (gfc_conv_missing_dummy,
	gfc_trans_alloc_subarray_assign, gfc_trans_zero_assign): Ditto.
	* trans-openmp.c (gfc_omp_clause_default_ctor,
	gfc_trans_omp_critical, gfc_trans_omp_parallel,
	gfc_trans_omp_parallel_do, gfc_trans_omp_parallel_sections,
	gfc_trans_omp_parallel_workshare, gfc_trans_omp_sections
	gfc_trans_omp_single, gfc_trans_omp_task,
	gfc_trans_omp_workshare): Ditto.

2010-09-09  Steven G. Kargl  <kargl@gcc.gnu.org>

	* fortran/expr.c (check_inquiry): OPTIONAL attribute is not allowed
	for dummy argument that appears in a specification statement.

2010-09-09  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_get_array_ref_dim): New function.
	(gfc_trans_create_temp_array): Reconstruct array
	bounds from loop bounds. Use array bounds instead of loop bounds.

2010-09-09  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_set_loop_bounds_from_array_spec):
	Get the array dimension from the dim array.

2010-09-09  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_trans_preloop_setup): Unconditionally use the
	dim array to get the stride in the innermost loop.

2010-09-09  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_trans_create_temp_array): Don't set dim array.
	(gfc_conv_loop_setup, gfc_walk_function_expr): Set dim array.
	* trans-intrinsic.c (gfc_walk_intrinsic_libfunc): Ditto.

2010-09-09  Mikael Morin  <mikael@gcc.gnu.org>
